[gd_scene load_steps=3 format=3 uid="uid://bb81edcytansq"]

[ext_resource type="Script" path="res://ui/actions_ui.gd" id="1_ddehn"]
[ext_resource type="PackedScene" uid="uid://cinxgj7qd2iah" path="res://ui/action_slot_ui.tscn" id="2_edy7y"]

[node name="ActionsUI" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ddehn")

[node name="ActionSlotUI1" parent="." instance=ExtResource("2_edy7y")]
unique_name_in_owner = true
layout_mode = 2

[node name="ActionSlotUI2" parent="." instance=ExtResource("2_edy7y")]
unique_name_in_owner = true
layout_mode = 2

[node name="ActionSlotUI3" parent="." instance=ExtResource("2_edy7y")]
unique_name_in_owner = true
layout_mode = 2
